--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "whois": "^2.14.0"
+    "whois": "^2.14.0",
+    "xml-formatter": "^3.4.1"
   }
 }
